# HybSynth_Master_Project

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  a.txt  dd.ipynb  pyproject.toml  requirements.txt  src.rar
docs/: How to make HybSynth.md
docs/tutorials/: hybsynth_hardware.md  software_setup.md
src/: __init__.py  constants.py  hardware.py  main.py  main2.py  mcp3008_handler.py  waveform.py
src/audio_effects/: __init__.py  delay.py  distortion.py  tremolo.py  vibrato.py
src/effects/: __init__.py  delay.py  tremolo.py  vibrato.py
src2/: __init__.py  main.py  mcp3008_handler.py  waveform.py
src2/audio_effects/: __init__.py  tremolo.py
tests/: testing.ipynb  tri.py
