[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybsynth"
version = "1.0.0"
description = "A hybrid audio synthesizer combining digital and analog components."
authors = [
    { name = "Zahra Pourizadeh", email = "mz.pourizadeh@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio :: Synthesis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["audio", "synthesizer", "raspberry-pi", "hybrid", "python"]
dependencies = [
    "numpy",
    "sounddevice",
    "gpiozero",
]

[project.urls]
Homepage = "https://github.com/pourizadeh/hybsynth"
Bug_Tracker = "https://github.com/pourizadeh/hybsynth/issues"

[project.scripts]
hybsynth = "hybsynth.main:main"

